test labelledby social class

--- a/Contact.html
+++ b/Contact.html
@@ -131,22 +131,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="twitter.html" title="twitter"><span class="fa fa-twitter icon-md"></span></a>
+							<a id="twit" class="social" href="twitter.html" title="twitter"><span class="fa fa-twitter icon-md" aria-labelledby="twit"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="facebook.html" title="facebook"><span class="fa fa-facebook icon-md"></span></a>
+							<a id="face" class="social" href="facebook.html" title="facebook"><span class="fa fa-facebook icon-md" aria-labelledby="face"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="dribble.html" title="dribble"><span class="fa fa-dribbble icon-md"></span></a>
+							<a id="drib" class="social" href="dribble.html" title="dribble"><span class="fa fa-dribbble icon-md" aria-labelledby="drib"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="instagram.html" title="instagram"><span class="fa fa-instagram icon-md"></span></a>
+							<a id="inst" class="social" href="instagram.html" title="instagram"><span class="fa fa-instagram icon-md" aria-labelledby="inst"></span></a>
 						</div>
 					</div>
 				</div>
