Changed to aria-label

--- a/index.html
+++ b/index.html
@@ -231,22 +231,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a id="twit" class="social" href="twitter.html" title="twitter"><span class="fa fa-twitter icon-md" aria-labelledby="twit"></span></a>
+							<a class="social" href="twitter.com" title="twitter"><span class="fa fa-twitter icon-md" aria-label="twitter"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a id="face" class="social" href="facebook.html" title="facebook"><span class="fa fa-facebook icon-md" aria-labelledby="face"></span></a>
+							<a class="social" href="facebook.com" title="facebook"><span class="fa fa-facebook icon-md" aria-label="facebook"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a id="drib" class="social" href="dribble.html" title="dribble"><span class="fa fa-dribbble icon-md" aria-labelledby="drib"></span></a>
+							<a class="social" href="dribble.com" title="dribble"><span class="fa fa-dribbble icon-md" aria-label="dribble"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a id="inst" class="social" href="instagram.html" title="instagram"><span class="fa fa-instagram icon-md" aria-labelledby="inst"></span></a>
+							<a class="social" href="instagram.com" title="instagram"><span class="fa fa-instagram icon-md" aria-label="instagram"></span></a>
 						</div>
 					</div>
 				</div>
