--- a/Contact.html
+++ b/Contact.html
@@ -33,9 +33,9 @@
 <!-- bloc-0 -->
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
-		<nav class="navbar row">
+		<nav class="navbar row" role="navigation">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.webp" alt="la chouette agence Lyon" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.webp" alt="la chouette agence Lyon" height="40" role="link" aria-label="lien accueil"/></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -43,7 +43,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="index.html" role="link">Accueil</a>
 					</li>
 				</ul>
 			</div>
@@ -100,14 +100,14 @@
 						</label>
 						<textarea id="message" class="form-control" rows="4" cols="50" aria-label="décrivez votre projet" required></textarea>
 					</div> 
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" role="button">
 						Envoyer
 					</button>
 				</form>
 			</div>
 			<div class="col-sm-6">
 				<address>
-					<a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a> <br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+					<a href="mailto:contact@lachouetteagence.com" role="link" aria-label="lien mail">contact@lachouetteagence.com</a> <br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</address>
 			</div>
 		</div>
@@ -131,22 +131,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="twitter.com" title="twitter"><span class="fa fa-twitter icon-md" aria-label="twitter"></span></a>
+							<a class="social" href="twitter.com" title="twitter"><span class="fa fa-twitter icon-md" role="link" aria-label="twitter"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="facebook.com" title="facebook"><span class="fa fa-facebook icon-md" aria-label="facebook"></span></a>
+							<a class="social" href="facebook.com" title="facebook"><span class="fa fa-facebook icon-md" role="link" aria-label="facebook"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="dribble.com" title="dribble"><span class="fa fa-dribbble icon-md" aria-label="dribble"></span></a>
+							<a class="social" href="dribble.com" title="dribble"><span class="fa fa-dribbble icon-md" role="link" aria-label="dribble"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="instagram.com" title="instagram"><span class="fa fa-instagram icon-md" aria-label="instagram"></span></a>
+							<a class="social" href="instagram.com" title="instagram"><span class="fa fa-instagram icon-md" role="link" aria-label="instagram"></span></a>
 						</div>
 					</div>
 				</div>
