--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 
-		<nav class="navbar row">
+		<nav class="navbar row" role="navigation">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="Accueil.html"><img src="img/la-chouette-agence.webp" alt="la chouette agence Lyon" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.webp" alt="la chouette agence Lyon" height="40" role="link" aria-label="lien acceuil" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -44,7 +44,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="Contact.html">Contactez-nous</a>
+						<a href="Contact.html" role="link" aria-label="lien contact">Contactez-nous</a>
 					</li>
 				</ul>
 			</div>
@@ -63,7 +63,7 @@
 					La chouette agence.
 				</h1>
 				<div class="text-center">
-					<a href="Contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="Contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" role="link">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -144,7 +144,7 @@
 				</h2>
 				<p class="text-center white">
 					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br>
-					<a class="ltc-white bold-link" href="Contact.html">Contactez notre équipe</a><br>
+					<a class="ltc-white bold-link" href="Contact.html" role="link" aria-label="lien contact">Contactez notre équipe</a><br>
 				</p>
 			</div>
 		</div>
@@ -213,7 +213,7 @@
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="Contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a href="Contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" role="link">Contact</a>
 			</div>
 		</div>
 	</div>
@@ -231,22 +231,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="twitter.com" title="twitter"><span class="fa fa-twitter icon-md" aria-label="twitter"></span></a>
+							<a class="social" href="twitter.com" title="twitter"><span class="fa fa-twitter icon-md" role="link" aria-label="twitter"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="facebook.com" title="facebook"><span class="fa fa-facebook icon-md" aria-label="facebook"></span></a>
+							<a class="social" href="facebook.com" title="facebook"><span class="fa fa-facebook icon-md" role="link" aria-label="facebook"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="dribble.com" title="dribble"><span class="fa fa-dribbble icon-md" aria-label="dribble"></span></a>
+							<a class="social" href="dribble.com" title="dribble"><span class="fa fa-dribbble icon-md" role="link" aria-label="dribble"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="instagram.com" title="instagram"><span class="fa fa-instagram icon-md" aria-label="instagram"></span></a>
+							<a class="social" href="instagram.com" title="instagram"><span class="fa fa-instagram icon-md" role="link" aria-label="instagram"></span></a>
 						</div>
 					</div>
 				</div>
@@ -255,11 +255,11 @@
 						<p class="text-center white">
 							Partenaires
 						</p>
-							<ul id="partners">
-								<li><a href="voiture.com">voiture.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="matoiture.com">matoiture.com</a></li>
-								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+							<ul id="partners" role="list" aria-label="liens partenaires">
+								<li><a href="voiture.com" role="link">voiture.com</a></li>
+								<li><a href="pizza.com" role="link">pizza.com</a></li>
+								<li><a href="matoiture.com" role="link">matoiture.com</a></li>
+								<li><a href="immobilierseo.com" role="link">immobilierseo.com</a></li>
 							</ul>		
 					</div>
 					<!--<div class="col-sm-4">
